Defined checkAnswer function to display of Incorrect or Correct on the page instead of as an alert.

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,3 +5,8 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+/*Removes the bullets from the answer choices in the question list*/
+#qa {
+    list-style: none;
+}
+
