--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,25 @@ body {
     list-style: none;
 }
 
+
+/* .btn.btn-primary {
+    text-align: initial !important;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1.2em;
+    letter-spacing: 0.21px;
+    line-height: 16px;
+    max-width: 255px;
+    padding: 20px 52px;
+    text-align: center;
+    transition-duration: 0.15s;
+    transition-property: background-color;
+    transition-timing-function: linear;
+    margin-top: 0.6em;
+} */
+
+
+
+
