--- a/assets/style.css
+++ b/assets/style.css
@@ -10,24 +10,10 @@ body {
     list-style: none;
 }
 
+h1 {
+    font-size: 1.5rem;
+}
 
-/* .btn.btn-primary {
-    text-align: initial !important;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1.2em;
-    letter-spacing: 0.21px;
-    line-height: 16px;
-    max-width: 255px;
-    padding: 20px 52px;
-    text-align: center;
-    transition-duration: 0.15s;
-    transition-property: background-color;
-    transition-timing-function: linear;
-    margin-top: 0.6em;
-} */
 
 
 
